ticketing/infra/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - image: 108356037/orders
        name: orders
        imagePullPolicy: IfNotPresent
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
spec:
  selector:
    app: orders
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
