ticketing/infra/orders-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-mongo
  strategy: {}
  template:
    metadata:
      labels:
        app: orders-mongo
    spec:
      containers:
      - image: mongo
        name: mongo
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: orders-mongo-svc
spec:
  selector:
    app: orders-mongo
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      name: db
