ticketing/infra/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
      - image: 108356037/tickets
        name: tickets
        imagePullPolicy: IfNotPresent
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-svc
spec:
  selector:
    app: tickets
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
