ticketing/infra/ingress-setup.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tickets-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: ticketing.dev
    http:
      paths:
      - pathType: Prefix
        path: /api/users/(.*)
        backend:
          service:
            name: auth-svc
            port:
              number: 3000
      - pathType: Prefix
        path: /api/tickets/(.*)
        backend:
          service:
            name: tickets-svc
            port:
              number: 3000
      - pathType: Prefix
        path: /(.*)
        backend:
          service:
            name: client-svc
            port:
              number: 3000
